:hammer: Fixed the footer being covered by the nav on mobile.

--- a/devwp/sass/components/_footer.scss
+++ b/devwp/sass/components/_footer.scss
@@ -13,7 +13,9 @@
 
 .footer {
   text-align: center;
-  margin-top: 30px;
+  margin-top: 20px;
+  margin-bottom: 70px;
+  font-size: .8em;
 
   p {
     color: $primary;
